--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^6.5.5",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "nodemailer": "^6.4.16",
+    "nodemailer-sendgrid": "^1.0.3",
     "nodemon": "^2.0.6",
     "sendgrid": "^5.2.3",
     "validator": "^13.1.17"
