--- a/server/package.json
+++ b/server/package.json
@@ -5,10 +5,7 @@
   "main": "server.js",
   "scripts": {
     "client": "cd ../client && npm start",
-    "build": "cd ../client && npm run build",
-    "install-client": "cd ../client && npm install",
-    "heroku-postbuild": "npm run install-client && npm run build",
-    "start": "node server.js",
+    "start": "node ./src/server.js",
     "dev": "concurrently  \"cd ./src && nodemon server.js\" \"npm run client\""
   },
   "keywords": [],
